codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_footer_note_wraps.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
assertion_line: 828
expression: "render_lines_with_width(&view, 40)"
---
                                        
  选择审批模式                  
                                        
› 1. 只读（当前）         Codex 可读取    
                          文件          
                                        
  注意：Use /setup-default-sandbox      
  以允许网络访问。                      
  按 Enter 确认或按 Esc 返回            
