codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_without_subtitle.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: render_lines(&view)
---
                                                
  选择审批模式                          
                                                
› 1. 只读（当前）         Codex 可读取文件  
  2. 完全访问             Codex 可编辑文件  
                                                
  按 Enter 确认或按 Esc 返回
